# plumb-qc

./: .gitattributes  .gitignore  Dockerfile  LICENSE  PLUMB_SPEC.md  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  BUSINESS-FIT.md  PARITY-PLAN-V2.md  PARITY-PLAN.md  PRD.md  RUNBOOK.md  SECURITY-ASSESSMENT.md  SPRINT.md  TEST-PLAN.md
docs/adr/: ADR-0001-error-and-warn-verdict-treatment.md  ADR-0002-coverage-risk-ranking.md  ADR-0003-read-only-guard-policy.md  ADR-0004-local-state-locations.md  ADR-0005-exit-code-gate-mapping.md  ADR-0006-summary-contract-extension.md  ADR-0007-toolchain-and-pins.md  ADR-0008-llm-provider-groq-first.md  ADR-0009-coverage-check-level-gaps.md  ADR-0010-typing-and-status-policy.md  ADR-0011-tableau-parsing-with-lxml.md  ADR-0012-shared-baseline-store.md  ADR-0013-llm-provider-groq-first.md  ADR-0013-migration-parity-family.md  ADR-0014-ai-assist-snowflake-cortex.md  ADR-0015-parity-v2-estate-postswap-customsql.md
plumb/: __init__.py  cli.py  diagnostics.py
plumb/ai/: __init__.py  client.py  explain.py  fix.py  parser.py  prompts.py  recon_sql.py
plumb/baseline/: store.py
plumb/checks/: __init__.py  _base.py  _metadata.py  _sql.py  _tableau.py  ai_review.py  parity.py  sql_assertions.py  sql_custom.py  sql_meta.py  sql_performance.py  sql_regression.py  sql_static.py  tableau_static.py
plumb/config/: loader.py  models.py  settings.py
plumb/connect/: snowflake.py
plumb/engine/: audit.py  buildquery.py  catalog.py  evidence.py  lineage.py  models.py  registry.py  runner.py  verdict.py
plumb/parity/: __init__.py  contracts.py  estate.py  mapping.py  metrics.py  runner.py  sources.py  sql_projection.py
plumb/report/: _xml.py  estate.py  html.py  json_out.py  junit.py
plumb/report/templates/: estate.html.j2  report.html.j2
rules/: customer_ltv.yml  plumb.yml
rules/profiles/: finance.yml  marketing.yml
scripts/: ai_live_demo.py  apply_snowflake_setup.py  audit_query_history.py  build_portable.py  demo_complex_query.py  demo_report.py  hit_live_web.py  hit_live_web_real.py  live_snowflake_demo.py  ltv.sql  ltv_rules.yml  selfcheck.py  snowflake_setup.sql  tableau_cloud_pull.py  verify_checks_live.py  verify_web.py
scripts/parity-smoke/: .gitignore  README.md  demo-custom-sql.twb  demo-query.sql  demo-workbook.twb  drift-map.yml  estate-manifest.yml  identity-map.yml
tests/: _fakes.py  _parity_fixtures.py  conftest.py  test_acceptance_phase1.py  test_acceptance_phase2.py  test_ai_assist.py  test_ai_review.py  test_baseline_store.py  test_buildquery.py  test_checks_assertions.py  test_checks_custom.py  test_checks_meta.py  test_checks_new.py  test_checks_parity.py  test_checks_performance.py  test_checks_regression.py  test_checks_static.py  test_checks_tableau.py  test_cli.py  test_cli_exit_codes.py  test_config_loader.py  test_connect_session.py  test_diagnostics.py  test_evidence.py  test_lineage.py  test_models_contract.py  test_parity_cli.py  test_parity_contracts.py  test_parity_estate.py  test_parity_mapping.py  test_parity_metrics.py  test_parity_runner.py  test_parity_sources.py  test_parity_sql_projection.py  test_readonly_guard.py  test_registry.py  test_report_estate.py  test_reports.py  test_runner.py  test_shipped_rules.py  (+4 more)
tests/fixtures/rulesets/: malformed_bad_severity.yml  malformed_not_yaml.yml  malformed_unknown_field.yml  profile_finance.yml  valid.yml
tests/fixtures/tableau/: sales_dashboard.twb
web/: __init__.py
web/api/: __init__.py  app.py
web/ui/: index.html  package-lock.json  package.json  vite.config.ts
web/ui/scripts/: dev-api.mjs
web/ui/src/: App.tsx  Architecture.tsx  BuildSetup.tsx  ConfigPanel.tsx  Customize.tsx  History.tsx  Lineage.tsx  MapBuilder.tsx  Migration.tsx  Report.tsx  Settings.tsx  Trend.tsx  api.ts  paramio.ts  styles.css  types.ts  ui.tsx
