[build-system]
requires = ["setuptools==75.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plumb"
version = "0.1.0"
description = "Plumb: local-first BI build QC and confidence engine for Snowflake plus Tableau teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlglot==26.3.8",
    "sqlfluff==3.3.1",
    "snowflake-connector-python==3.13.2",
    "pydantic==2.10.6",
    "PyYAML==6.0.2",
    "typer==0.15.1",
    # Typer 0.15.1 uses Click APIs that changed in Click 8.2 (make_metavar
    # signature), which breaks the rich help renderer. Pin to the last 8.1.x.
    "click==8.1.8",
    "rich==13.9.4",
    "jinja2==3.1.5",
    "pyarrow==18.1.0",
    "keyring==25.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "python-dotenv==1.0.1",
    "types-PyYAML==6.0.12.20240917",
]

[project.scripts]
plumb = "plumb.cli:main"

[tool.setuptools.packages.find]
include = ["plumb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E722 enforces the no-bare-except invariant. T201 enforces no print for user output.
select = ["E", "F", "W", "I", "B", "T20"]

[tool.ruff.lint.per-file-ignores]
# B008 is the standard Typer idiom: Option/Argument calls in parameter defaults.
"plumb/cli.py" = ["B008"]
# Demo scripts are standalone tools where print to stdout is the intended output.
"scripts/*.py" = ["T201", "E402"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

# The check-implementation modules are registry-discovered callables that
# share one CheckContext whose sql_text and session are Optional by design
# (a check may run static-only). After each check's own SKIP guard those are
# non-None, but that postcondition is not expressible to mypy without noise.
# The core (engine, config, connect) and the check helper modules stay
# strict; see ADR-0010. The checks themselves are covered by fixture tests.
# Third-party packages without bundled type stubs.
[[tool.mypy.overrides]]
module = ["pyarrow.*", "snowflake.*", "sqlfluff.*", "keyring.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "plumb.checks.sql_static",
    "plumb.checks.sql_meta",
    "plumb.checks.sql_assertions",
    "plumb.checks.sql_regression",
    "plumb.checks.sql_performance",
]
disallow_untyped_defs = false
disable_error_code = ["union-attr", "arg-type"]
